--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -254,6 +254,8 @@ endif ()
 foreach (name zeek_exe zeek_lib zeek_fuzzer_shared)
     if (TARGET ${name})
         target_compile_definitions(${name} PRIVATE ZEEK_CONFIG_SKIP_VERSION_H)
+        target_compile_definitions(${name} PRIVATE OPENTELEMETRY_STL_VERSION=2017)
+        target_compile_definitions(${name} PRIVATE OPENTELEMETRY_ABI_VERSION_NO=1)
     endif ()
 endforeach ()
 
@@ -347,6 +349,8 @@ function (zeek_add_subdir_library name)
     target_compile_features(${target_name} PRIVATE ${ZEEK_CXX_STD})
     set_target_properties(${target_name} PROPERTIES CXX_EXTENSIONS OFF)
     target_compile_definitions(${target_name} PRIVATE ZEEK_CONFIG_SKIP_VERSION_H)
+    target_compile_definitions(${target_name} PRIVATE OPENTELEMETRY_STL_VERSION=2017)
+    target_compile_definitions(${target_name} PRIVATE OPENTELEMETRY_ABI_VERSION_NO=1)
     add_dependencies(${target_name} zeek_autogen_files)
     target_link_libraries(${target_name} PRIVATE $<BUILD_INTERFACE:zeek_internal>)
     add_clang_tidy_files(${FN_ARGS_SOURCES})
@@ -1080,6 +1084,7 @@ include(CheckNameserCompat)
 include(GetArchitecture)
 include(FindKqueue)
 include(FindCAres)
+include(FindPrometheusCpp)
 include_directories(BEFORE "auxil/out_ptr/include")
 
 if ((OPENSSL_VERSION VERSION_EQUAL "1.1.0") OR (OPENSSL_VERSION VERSION_GREATER "1.1.0"))
